tests/ui/parser/unbalanced-doublequote.rs
//@ error-pattern: unterminated double quote string


fn main() {
    "
}

// ferrocene-annotations: fls_hucd52suu6it
// Simple String Literals
//
// ferrocene-annotations: fls_boyhlu5srp6u
// String Literals
